--- a/mysite/docker-compose.yml
+++ b/mysite/docker-compose.yml
@@ -1,22 +1,34 @@
-version: '3'
+version: '3.8'
 
 services:
-  web:
+  django:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: sh -c "./wait-for-it.sh mysql 3306 -- python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_NAME=quickstart
-      - DATABASE_USER=qzj
-      - DATABASE_PASSWORD=db123456
-      - DATABASE_HOST=docker-myqsl-quickstart
-      - DATABASE_PORT=3306
-    networks:
-      - mynetwork
+      - DATABASE_NAME=${DATABASE_NAME}
+      - DATABASE_USER=${DATABASE_USER}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - DATABASE_HOST=${DATABASE_HOST}
+      - DATABASE_PORT=${DATABASE_PORT}
+    depends_on:
+      - mysql
 
-networks:
-  mynetwork:
-    external: true
+  mysql:
+    image: mysql:8.0
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: db123456
+      MYSQL_DATABASE: docker-mysql-quickstart
+      MYSQL_USER: qzj
+      MYSQL_PASSWORD: db123456
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+volumes:
+  mysql_data:
