fix bugs, Split docker-compose.yml for mysql and django so they can run independently

--- a/django/docker-compose.yml
+++ b/django/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       ports:
         - "8000:8000"
       networks:
-        - my_mysql_network
+        - mynetwork
 
 networks:
-  my_mysql_network:
+  mynetwork:
     external: true
